--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,7 +3,7 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. In the only experimental implementation thus far ,the size of the focal spot of the FEL (>100\,nm) has been meassured \cite{nakumura2020}.
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increases the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been meassured \cite{nakumura2020}.
 
 In this work, major steps towards realizing the spatial resolution potential of the method by imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: A simulation-guided experiment performed at the SACLA FEL facility is presented, utilizing new experimental techniques as well as processing steps to overcome some of the limitations of IDI. 
 The results of the previously reported imaging of the focus could be reproduced. 
@@ -20,5 +20,5 @@ Eine neuartiges Verfahren, \textit{Incoherent Diffractive Imaging}, verspricht d
 In den bislang einzigen veröffentlichten Ergebnissen dieser Methode wird jedoch nur  die Fokalgröße des zur Anregung genutzten Röntgen Freie-Elektronen-Laser (FEL) bestimmt \cite{nakumura2020}.
 
 In der vorliegenden Arbeit werden Schritte in Richtung der Messung deutlich kleineren Strukturen (Eisennanopartikel) und dreidimensionaler Messung von Einkristellen vorgestellt: Simulationen erlauben den Einfluss und die Relevanz verschiedener Parameter einzuschätzen und Proben sowie einen Aufbau für ein Experiment am SACLA FEL zu entwickeln. In der Auswertung der in diesem Experiment aufgenommenen Daten müssen Störeinflüsse minimiert und experimentelle Limitationen ausgeglichen werden. Dies erfolgt u.a. durch die (für IDI erstmalige) Anwendung von Kossellinien basierter Orientierungsbestimmung.  
-Es gelang, die Abbildung des Fokus zu erfolgreich reproduzieren.  Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichtet zu planen.
+Es gelang, die Abbildung des Fokus erfolgreich zu reproduzieren.  Obwohl in den ausgewerteten Daten bislang das Ziel der Auflösungserhöhung nicht erreicht werden konnte, erlauben die vorliegenden Ergebnisse weitere Experimente zielgerichtet zu planen.
 \end{otherlanguage}
