--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -79,7 +79,7 @@
 \titlespacing\section{0pt}{12pt plus 8pt minus 4pt}{0pt plus 2pt minus 4pt}
 \titlespacing\subsection{0pt}{10pt plus 8pt minus 4pt}{0pt plus 2pt minus 4pt}
 \titlespacing\subsubsection{0pt}{10pt plus 8pt minus 4pt}{0pt plus 2pt minus 4pt}
-\titlespacing\paragraph{0pt}{4pt plus 2pt minus 2pt}{0pt plus 2pt minus 2pt}
+%\titlespacing\paragraph{0pt}{4pt plus 2pt minus 2pt}{0pt plus 2pt minus 2pt}
 \titleformat{\chapter}[display]   
 {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{10pt}{\Huge}   
 \titlespacing*{\chapter}{0pt}{-30pt}{20pt}
@@ -93,10 +93,10 @@
 \setlength{\abovecaptionskip}{10pt plus 6pt minus 2pt}
 \captionsetup[subfigure]{aboveskip=1pt}
 %kleinere abstände bei gleichungen
-\setlength{\abovedisplayskip}{-4pt plus 2pt}
-\setlength{\belowdisplayskip}{-4pt plus 2pt}
-\setlength{\abovedisplayshortskip}{0pt}
-\setlength{\belowdisplayshortskip}{0pt}
+\setlength{\abovedisplayskip}{-6pt plus 4pt}
+\setlength{\belowdisplayskip}{-6pt plus 4pt}
+\setlength{\abovedisplayshortskip}{-6pt plus 4pt}
+\setlength{\belowdisplayshortskip}{-6pt plus 4pt}
 %1.5 zeilig
 \usepackage{setspace}
 
