--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -1,34 +1,29 @@
 \chapter{Simulations}
 \label{chap:simulation}
-To illustrate the working principle of IDI and to examine the Signal-to-Noise characteristics, different simulations were performed:\\
-First, it was assumed that the object to be imaged consists of discrete emitters, each emitting monochromatic spherical waves with the same wavelength, but with a randomly chosen phase, and the speckle image on a pixelated detector was simulated by the addition of the scalar electric fields and taking the squared magnitude for each pixel. To reduce the influence of this discrete sampling on the simulated speckle patterns, the simulation is performed at XX the resolution and downsampled, such that each data point is the result of 4x4 discrete calculations.
-In this configuration, the speckle images of a single particle with randomly positioned emitters inside (approximating a single particle imaging setup), a focal volume filled with randomly positioned (non intersecting) hard spheres consisting of randomly positioned atoms (approximating, for example, many spherical nanoparticles imaged simultaneously) as well as a crystalline structure with emitters positioned at within a lattice were simulated. In the first two cases, a small-angle regime was chosen, and the reconstruction was performed in 2D and as a 1D radial profile. For the crystalline structure, a realistic lattice constant in the same order of magnitude as the K$\alpha$ wavelength moves the reconstruction out of the small-angle regime, and a 3D reconstruction of the reciprocal space was performed.
-Additionally, in these simulations the effect of under-sampling was studied.\\
-Secondly, to examine the influence of the fluorescence lifetime and pulse width, a time-resolved simulation was performed.
+To illustrate the working principle of IDI and to examine the Signal-to-Noise characteristics, the results of different simulations will be shown:\\
+First, it is assumed that the object to be imaged consists of discrete emitters, each emitting monochromatic spherical waves with a randomly chosen phase, and the speckle image on a pixelated detector was simulated by the addition of the scalar electric fields, taking the squared magnitude and Poisson sampling in each pixel. To reduce the influence of this discrete sampling on the simulated speckle patterns, the simulation is performed at a higher and downsampled, such that each data point is the result of 4x4 discrete calculations. In this configuration, the speckle images of a single particle with randomly positioned emitters inside (approximating a single particle imaging setup), a focal volume filled with randomly positioned (non intersecting) hard spheres consisting of randomly positioned atoms (approximating, for example, many spherical nanoparticles imaged simultaneously) as well as a crystalline structure with emitters positioned within a lattice are simulated. In the first two cases, a small-angle regime was chosen, and the reconstruction was performed in 2D and as a 1D radial profile. For the crystalline structure, a realistic lattice constant in the same order of magnitude as the K$\alpha$ wavelength moves the reconstruction out of the small-angle regime, and a 3D reconstruction of the reciprocal space is performed. Additionally, in these simulations the effect of under-sampling is studied.\\
+Secondly, to examine the influence of the finite fluorescence lifetime and pulse width, and the validity of approximating  this influence by the overlay of a discrete number of speckle images according to the estimated number of modes, a time-resolved simulation is performed.
 
-
-Ultimately, the results of these simulations were used the determine the feasibility of an experimental setup using IDI.
+Ultimately, the results of these simulations are used to estimate the parameters for an experimental setup.
 
 \section{Time Independent Simulations}
-In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently the superposition of scalar electrical fields emitted with random phases $\phi_n$ from with $N$ excited atoms  at positions $r_n$ chosen randomly out of all possible atom positions inside the sample,
+In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently as superposition of scalar electrical fields emitted with random phases $\phi_n$ from with $N$ excited atoms  at positions $r_n$ chosen randomly out of all possible atom positions inside the sample,
 \begin{equation}
 E(\vec{r})=\sum_n^N \frac{1}{\left|\vec{r}_n-\vec{r}\right|} e^{i(k_n{\left|\vec{r}_n-\vec{r}\right|}+\phi_n)} \,.
 \end{equation} 
-The simulation of the intensity $I=\left|E\right|^2$ at multiple discrete points $r$ on the simulated detector and Poisson sampling with mean photon numbers according to the number of simulated excited atoms, distance  and simulated pixelsize, can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model. 
-
-
+The simulation of the intensity $I=\left|E\right|^2$ at multiple discrete points $r$ on the simulated detector and Poisson sampling (with mean photon numbers according to the number of simulated excited atoms, distance  and simulated pixelsize), can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model. 
 
 
 \subsection{Detector Effects}
 \label{sec:chargesharing}
-To simulate the influence of detector dependent charge-sharing and readout noise, an image degradation is performed: After Poisson sampling, the simulated speckle image, for each photon a uniform random position within its pixel is chosen as the center of a Gaussian distribution with $\sigma$=0.1, pixel, similar to the size of the point spread function (PSF) for MPCCD detectors \cite{mpccd}.
+To simulate the influence of charge-sharing and readout noise of the detector, an image degradation is performed: After Poisson sampling the simulated speckle image, for each photon a uniform random position within its pixel is chosen as the center of a Gaussian distribution with $\sigma$=0.1, pixel, similar to the size of the point spread function (PSF) for MPCCD detectors \cite{mpccd}.
 The signal within each pixel caused by one photon is given by the integral over the Gaussian,
 \begin{equation*}
 	I(\Delta x,\Delta y)=\frac{1}{4} \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta x}{\sqrt{2}
 		\sigma}\right)+\text{erf}\left(\frac{\sfrac{1}{2}+\Delta x}{\sqrt{2} \sigma}\right)\right) \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta y}{\sqrt{2}
 		\sigma}\right)+\text{erf}\left(\frac{\sfrac{1}{2}+\Delta y}{\sqrt{2} \sigma}\right)\right)
 \end{equation*}
-with $\sigma$ the standard deviation of the Gaussian in pixels and $\Delta x$, $\Delta y$ the distance of the pixel to the simulated photon center. Afterwards, a Gaussian readout noise is added. The effect of this degradation on the spectrum is illustrated in \fref{fig:degrad}.
+with $\sigma$ the standard deviation of the Gaussian in pixels and $\Delta x$, $\Delta y$ the distance of the pixel to the drawn photon center. Afterwards, a Gaussian readout noise is added. The effect of this degradation on the spectrum is illustrated in \fref{fig:degrad}.
 
 \subsection{Autocorrelation}
 The numerator of $g^2$ is the autocorrelation of the recorded intensities $I$ which can be calculated as follows:
@@ -66,17 +61,16 @@ as $I\in \Re$ and $I_{n\geq N}$=0, greatly reducing the computational complexity
 The number of correlation pairs $N_p$ which contribute to the sum in \fref{eq:fftcorrelation} for each $q$ can be found by performing the same operations with a constant image (of the same shape) $M$ of all ones, leading to the numerator of $g^2$ being $\operatorname{AC}(I)/\operatorname{AC}(M)$ \cite{oppenheim2009,butz2015,nion2008}.
 
 \subsection{Normalisation}
-In the definition $g^2$ (\fref{eq:g2}), normalization is performed by the product of the expectation values of the intensity at the two locations. As these expectation values are influenced by the sample, the geometry, and experimental imperfections, some considerations how to implement this normalization have to be made for calculating $g^2(\Delta\vec{q})$ from measured or simulated fluorescence speckle patterns. 
-If only a single image is taken, the expectation value for each pixel has to be approximated. This can be done by assuming an equal value for all pixels (and estimating by the mean), which will lead to significant artifacts if, for example, due to geometry outside pixels have a much lower true expectation value than pixels in the center of the recorded image.  
+In the definition $g^2$ (\fref{eq:g2}), normalization is performed by the product of the \textit{expectation values} of the intensities at the two locations. As these expectation values are influenced by the sample, the geometry, and experimental imperfections, some considerations how to implement this normalization have to be made for calculating $g^2(\Delta\vec{q})$ from measured or simulated fluorescence speckle patterns. 
 
-For masked image registration and similiar tasks, the cross correlation is commonly normalized by the following (simplified to the relevant case of the autocorrelation) divisor \cite{padfield2010}:
+If only a single image is taken, the expectation value for each pixel has to be roughly approximated. This can be done by assuming an equal value for all pixels (and estimating by the mean), which will lead to significant artifacts if, for example, due to the geometry, outside pixels have a much lower true expectation value than pixels in the center of the recorded image.  
+For masked image registration and similar tasks, the cross correlation is commonly normalized by the following (simplified to the relevant case of the autocorrelation) divisor \cite{padfield2010}:
 \begin{equation}
 \frac{\mathit{corr}(\mathit{mask},\mathit{image}) \mathit{corr}(\mathit{image},\mathit{mask})}{\mathit{corr}(\mathit{mask},\mathit{mask})} \,,
-\end{equation} which would correspond to estimation of the expectation values  y the mean over all pixels that form a pixel pair contributing to the value in the reconstruction at a particular $\Delta q$, giving an slightly different weighting to the pixels than first first calculating $g^2$ normalized by the true expectation values for each pair and afterwards averaging over the pairs.
-If multiple images are taken, under the assumption of ergodicity, the expectation value for each pixel can be approximated by its mean over many images. To account for fluctuations in the exciting FEL pulse and resulting fluctuations of the fluorescence intensity, if it can be assumed that the distribution over pixel intensities and FEL intensities are uncorrelated, the photon detection probability of each pixel in each shot can be factorized into the product of the probability to detect a photon in a pixel and to detect a photon in a shot. Thus, the effect of the FEL intensity fluctuations can be suppressed by normalizing each image by the total intensity. This normalization scheme will be used for all reconstructions in this thesis.
-For brevity, a detailed comparison of the different normalization approaches is not shown. Still, the successful reconstructions of the reciprocal space, for both wide and small angle simulations with varying amounts of noise and simulated photon numbers, without any pedestal ($g^2(\infty)\not\approx 1$) or strong artifacts throughout this chapter show that the applied normalization is sufficient.  
+\end{equation} which would correspond to estimation of the expectation values  by the mean over all pixels that form pixel pairs contributing to the value in the reconstruction at a particular $\Delta \vec{q}$, giving an slightly different weighting to the pixels than first first calculating $g^2$ normalized by the true expectation values for each pair and afterwards averaging over the pairs would give.
 
-
+If multiple images are recorded or simulated, the expectation value for each pixel can be approximated by its mean over many realizations, i.e. images. To account for fluctuations in the exciting FEL pulse and resulting fluctuations of the fluorescence intensity, under the assumption that the distribution over pixel intensities and FEL intensities are uncorrelated, the expectation value of photon detection probability of each pixel in each shot can be factorized into the product of the probability to detect a photon in a particular pixel and the probability to detect a photon in a shot. Thus, the effect of the FEL intensity fluctuations can be suppressed by normalizing each image by the total intensity, and the uneven probabilities for different pixels by normalizing each pixel by its mean over all images. This normalization scheme will be used for all reconstructions in this thesis.
+For brevity, a detailed comparison of the different normalization approaches is not shown. Still, the successful reconstructions of the reciprocal space, for both wide and small angle simulations with varying amounts of noise and simulated photon numbers, without any pedestal ($g^2(\infty)\not\approx 1$) or strong artifacts throughout this chapter indicate that the applied normalization is sufficient.  
 
 
 
@@ -148,11 +142,11 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 
 \subsection{Accessible Reciprocal Space}
 
-	As IDI is based on $g^2(\Delta \vec{q})$, for a ...  $q$ determined by the experimental geometry ($k$, detector size and distance), IDI can achieve higher $\left|\vec{q}\right|$ than a scattering setup, increasing the numerical aperture and could in theory be used to achieve a higher resolution. In practice, for most samples the resolution will be limited by the $q^{-4}$ dependence of $S$ and the SNR, thus only increasing the resolution for samples with strong features at high $q$.
+	As IDI is based on $g^2(\Delta \vec{q})$, for a set of accessible $q$'s determined by the experimental geometry ($k$, detector size and distance), IDI can give information about $S(\vec{q})$ at higher $\left|\vec{q}\right|$ than a traditional scattering setup increasing the numerical aperture (in a small angle regime up to a factor of two) and could in theory be used to achieve a higher resolution. In practice, for most samples the resolution will be limited by the $q^{-4}$ dependence of $S$ and the SNR, thus only increasing the resolution for samples with strong features at high $q$.
 	
-	Compared to CDI, which measures $\vec{q}$ on the Ewald sphere and gives only limited $q_z$ information, IDI with a flat detector can give access  to a three dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq} and, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment as shown in \fref{fig:accesiblebraggq}. 
+	Compared to CDI, which measures $\vec{q}$ on the Ewald sphere and gives only limited $q_z$ information, IDI with a flat detector can give access to a three dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq} and, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment as shown in \fref{fig:accesiblebraggq}. 
 		
-	
+
 \subsection{Detector Size and SNR}
 	
 	To asses the influence of the number of pixels of an detector (and correlation pairs) on the SNR, a simulation for a 1\,um thick Copper foil in an 100\,nm FWHM focus is performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. For the SNR calculations, the signal is defined as, the noise as the standard deviation XXX
@@ -316,7 +310,7 @@ E(t_n)=E(t_{n-1})*e^{\sfrac{t_{n-1}-t_n}{\tau}}+E_n
 This procedure is efficient in regards of discrete time steps that need to be calculated and can easily be run on a GPU.
 
 \subsection{Influence of the Pulse Length}
-For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, the speckle strength (calculated as the standard deviation of the speckle pattern over the mean) of a series of simulations with different decay times $\tau$ of the emission and different FWHM of the exciting Gaussian pulse are shown in \fref{fig:pulsedecay}.  These follow the $1/\sqrt{erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes.  For each simulation, a reconstruction can be performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere}. The visibility of the reconstructions (\fref{fig:tdpshere_visrecons}) shows the for long pulses a reciprocal relationship.
+For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, the speckle strength (calculated as the standard deviation of the speckle pattern over the mean) of a series of simulations with different decay times $\tau$ of the emission and different FWHM of the exciting Gaussian pulse are shown in \fref{fig:pulsedecay}.  These follow the $1/\sqrt{erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes in \fref{sec:specklecontrast}.  For each simulation, a reconstruction can be performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere}. The visibility of the reconstructions (\fref{fig:tdpshere_visrecons}) shows the for long pulses a reciprocal relationship.
 
 \subsection{Influence of the Sample Thickness}
 To investigate the influence of the sample thickness, the speckle strength in a simulation is shown in \fref{fig:thickness}. In this simulation, a constant number ($10^6$) of 8\,keV emitters are placed inside a 200\,nm x 200\,nm (FWHM) Gaussian volume with varying thickness.  The axis of varying thickness is always set perpendicular to the detector, and the viewing angle $\alpha$ does not change the overall volume in which the emitters are placed, ensuring a constant speckle size. Therefore, the change in SNR is only caused by the finite coherence time $\tau$=1\,fs and the 1\,fs FWHM Gaussian from which the emission times are sampled, not by a change of the sampling conditions. The 64x64 pixel (pixelsize 100\,um) detector is placed in 1\,m distance. The simulation is performed with 4x oversampling and rebinning in both directions.  
